--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.6",
+    "@ionic/angular": "^7.7.4",
+    "animejs": "^3.2.2",
     "express": "^4.18.2",
+    "flubber": "^0.4.2",
     "igniteui-angular": "^17.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +35,7 @@
     "@angular-devkit/build-angular": "^17.0.6",
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.0",
+    "@types/animejs": "^3.1.12",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
