--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.6",
     "@ionic/angular": "^7.7.4",
+    "angular-in-memory-web-api": "^0.17.0",
     "animejs": "^3.2.2",
     "express": "^4.18.2",
     "flubber": "^0.4.2",
