--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/api"],
             "styles": ["src/styles.css"],
             "scripts": [],
             "server": "src/main.server.ts",
